--- a/app/views/prototypes/paper-transfer-process/paper-assessment-information/index.html
+++ b/app/views/prototypes/paper-transfer-process/paper-assessment-information/index.html
@@ -69,10 +69,12 @@
                   },
                   {
                     name: "month",
+                    value: data['dateSignedOff-month'],
                     classes: "nhsuk-input--width-2"
                   },
                   {
                     name: "year",
+                    value: data['dateSignedOff-year'],
                     classes: "nhsuk-input--width-4"
                   }
                 ]
