Link "change" actions in summary list

--- a/app/views/prototypes/paper-transfer-process/review-and-submit/index.html
+++ b/app/views/prototypes/paper-transfer-process/review-and-submit/index.html
@@ -24,28 +24,28 @@
             <dt class="nhsuk-summary-list__key">Name of educator or supervisor</dt>
             <dd class="nhsuk-summary-list__value">{{ data['educatorName'] }}</dd>
             <dd class="nhsuk-summary-list__actions">
-              <a href="#">Change<span class="nhsuk-u-visually-hidden">Name of educator or supervisor</span></a>
+              <a href="/paper-transfer/paper-assessment-information">Change<span class="nhsuk-u-visually-hidden">Name of educator or supervisor</span></a>
             </dd>
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">Educators or supervisors registration number (PRN)</dt>
             <dd class="nhsuk-summary-list__value">{{ data['educatorPRN'] }}</dd>
             <dd class="nhsuk-summary-list__actions">
-              <a href="#">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
+              <a href="/paper-transfer/paper-assessment-information">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
             </dd>
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">Organisation</dt>
             <dd class="nhsuk-summary-list__value">{{ data['organisationSignedOff'] }}</dd>
             <dd class="nhsuk-summary-list__actions">
-              <a href="#">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
+              <a href="/paper-transfer/paper-assessment-information">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
             </dd>
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">Signed off date</dt>
             <dd class="nhsuk-summary-list__value">{{ data['dateSignedOff-day'] }}-{{ data['dateSignedOff-month'] }}-{{ data['dateSignedOff-year'] }}</dd>
             <dd class="nhsuk-summary-list__actions">
-              <a href="#">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
+              <a href="/paper-transfer/paper-assessment-information">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
             </dd>
           </div>
           <div class="nhsuk-summary-list__row">
@@ -103,7 +103,7 @@
               </ul>
             </dd>
             <dd class="nhsuk-summary-list__actions">
-              <a href="#">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
+              <a href="/paper-transfer/additional-proficiencies">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
             </dd>
           </div>
           <div class="nhsuk-summary-list__row">
@@ -114,14 +114,14 @@
               <div><a href="{{ data['declarationDocUpload'] }}">{{ data['declarationDocUpload'] }} (open's in a new tab)</a></div>
             </dd>
             <dd class="nhsuk-summary-list__actions">
-              <a href="#">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
+              <a href="/paper-transfer/upload">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
             </dd>
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">Declaration</dt>
             <dd class="nhsuk-summary-list__value">Signed <span id="current-date"></span></dd>
             <dd class="nhsuk-summary-list__actions">
-              <a href="#">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
+              <a href="/paper-transfer/sign-decleration">Change<span class="nhsuk-u-visually-hidden"> xxx </span></a>
             </dd>
           </div>
         </dl>
