--- a/app/assets/sass/components/dls-copy/_layout.scss
+++ b/app/assets/sass/components/dls-copy/_layout.scss
@@ -329,19 +329,19 @@
 //   }
 // }
 
-.nhsuk-width-container,
-.nhsuk-header__navigation {
-  // max-width: 1144px !important;
-  // padding-left: $nhsuk-gutter !important;
-  // padding-right: $nhsuk-gutter !important;
-  
-  max-width: 1144px;
-  
-  @media only screen and (max-width: 1208px) and (min-width: 960px) {
-    margin-left: 32px;
-    margin-right: 32px;
-  }
-}
+// .nhsuk-width-container,
+// .nhsuk-header__navigation {
+//   // max-width: 1144px !important;
+//   // padding-left: $nhsuk-gutter !important;
+//   // padding-right: $nhsuk-gutter !important;
+
+//   max-width: 1144px;
+
+//   @media only screen and (max-width: 1208px) and (min-width: 960px) {
+//     margin-left: 32px;
+//     margin-right: 32px;
+//   }
+// }
 
 // .nhsuk-width-container {
 //   margin: auto !important;
