--- a/app/views/prototypes/paper-transfer-process/_dls-parts/index.html
+++ b/app/views/prototypes/paper-transfer-process/_dls-parts/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="nhsuk-width-container">
   <link rel="stylesheet" href="https://www.dls.nhs.uk/v2/css/learningPortal/current.css">
 
   <div class="nhsuk-grid-row" id="js-styling-hidden-area-while-loading">
@@ -158,7 +158,7 @@
 
     </div>
   </div>
-
+</div>
 
 {% endblock %}
 
