--- a/app/views/prototypes/paper-transfer-process/_dls-parts/iv-therapy/index.html
+++ b/app/views/prototypes/paper-transfer-process/_dls-parts/iv-therapy/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="nhsuk-width-container">
   {# <link rel="stylesheet" href="https://www.dls.nhs.uk/v2/css/learningPortal/current.css"> #}
 
   <h1>IV Therapy Passport</h1>
@@ -110,7 +110,7 @@
     </div>
   </div>
   <a class="nhsuk-button trigger-loader" href="/paper-transfer/have-you-completed-a-paper-assessment">Setup assessment</a>
-
+</div>
 
 {% endblock %}
 
