--- a/app/views/prototypes/paper-transfer-process/_dls-parts/steps1/index.html
+++ b/app/views/prototypes/paper-transfer-process/_dls-parts/steps1/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="nhsuk-width-container">
   <h1>Step 1 Proficiencies - National Proficiency Framework for Registered Nurses in Adult Critical Care</h1>
 
   <div class="nhsuk-grid-row">
@@ -45,7 +45,7 @@
   </div>
 
   <a class="nhsuk-button nhsuk-button--secondary trigger-loader" href="#">View Proficiencies</a>
-
+</div>
 {% endblock %}
 
 {% block outerContent %}
