--- a/docs/views/template.html
+++ b/docs/views/template.html
@@ -93,7 +93,7 @@
       {% block beforeContent %}{% endblock %}
 
       {% block main %}
-        <div class="{{ containerClasses }}">
+        <div class="nhsuk-width-container nhsuk-width-container--full-width {{ containerClasses }}">
           {% block outerContent %}{% endblock %}
           <main class="nhsuk-main-wrapper {{ mainClasses }}" id="maincontent" role="main">
             {% block content %}{% endblock %}
