Update header to bring inline with dls

--- a/app/views/layouts/layout.html
+++ b/app/views/layouts/layout.html
@@ -24,7 +24,7 @@
       "service": {
         "name": "Digital Learning Solutions Prototype"
       },
-      "homeHref": "/admin-home",
+      "homeHref": "./",
       "showNav": "true",
       "classes": "",
       "primaryLinks": [
@@ -55,8 +55,6 @@
       ]
     })
   }}
-
-  {# {% include "includes/dls-header.html" %} #}
 {% endblock %}
 
 <!-- Edit the footer -->
