--- a/app/views/prototypes/paper-transfer-process/confirmation/index.html
+++ b/app/views/prototypes/paper-transfer-process/confirmation/index.html
@@ -1,9 +1,8 @@
 {% extends 'layouts/layout.html' %}
-<!-- {% from 'button/macro.njk' import button %}
-{% from 'radios/macro.njk' import radios %} -->
 
-{% set html_style = 'background-color: #f0f4f5;' %}
-{% from 'components/task-list/macro.njk' import taskList %}
+{% block header %}
+  {% include "includes/dls-header-iv-therapy.html" %}
+{% endblock %}
 
 {% block beforeContent %}
 {% endblock %}
