--- a/app/views/prototypes/paper-transfer-process/additional-proficiencies/index.html
+++ b/app/views/prototypes/paper-transfer-process/additional-proficiencies/index.html
@@ -1,5 +1,9 @@
 {% extends 'layouts/layout.html' %}
 
+{% block header %}
+  {% include "includes/dls-header-iv-therapy.html" %}
+{% endblock %}
+
 {% block beforeContent %}
 {% endblock %}
 
