--- a/app/views/prototypes/paper-transfer-process/additional-proficiencies/add-proficiencies.html
+++ b/app/views/prototypes/paper-transfer-process/additional-proficiencies/add-proficiencies.html
@@ -17,7 +17,7 @@
         }) }}
 
         <div class="content-group">
-          <h1>Additional proficiencies</h1>
+          <h1>Select proficiencies</h1>
 
           {{ warningCallout({
             heading: "Record additional proficiencies",
