Update routs to handle multiple entry points for differnt fra mework and tidy up page data and content.

--- a/app/views/prototypes/paper-transfer-process/_dls-parts/about-steps-1/index.html
+++ b/app/views/prototypes/paper-transfer-process/_dls-parts/about-steps-1/index.html
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <a class="nhsuk-button nhsuk-button--secondary trigger-loader" href="#">View Proficiencies</a>
+  <a class="nhsuk-button" href="/paper-transfer/have-you-completed-a-paper-assessment">Setup assessment</a>
 </div>
 {% endblock %}
 
