--- a/app/views/prototypes/paper-transfer-process/additional-proficiencies/add-proficiencies-iv-therapy.html
+++ b/app/views/prototypes/paper-transfer-process/additional-proficiencies/add-proficiencies-iv-therapy.html
@@ -34,22 +34,22 @@
               name: "preparation",
               items: [
                 {
-                  name: "preparation-14a",
+                  name: "ivTherapyAdditionalProficiencies",
                   value: "Methods of preparation: 14a. Reconstitute IV medication from powder",
                   text: "14a. Reconstitute IV medication from powder"
                 },
                 {
-                  name: "preparation-14b",
+                  name: "ivTherapyAdditionalProficiencies",
                   value: "Methods of preparation: 14b. Draw up liquid IV medication, dilute if required in a syringe",
                   text: "14b. Draw up liquid IV medication, dilute if required in a syringe"
                 },
                 {
-                  name: "preparation-14c",
+                  name: "ivTherapyAdditionalProficiencies",
                   value: "Methods of preparation: 14c. Add IV medication to a bag for infusion",
                   text: "14c. Add IV medication to a bag for infusion"
                 },
                 {
-                  name: "preparation-14d",
+                  name: "ivTherapyAdditionalProficiencies",
                   value: "Methods of preparation: 14d. Use pre-prepared IV medication",
                   text: "14d. Use pre-prepared IV medication"
                 }
@@ -65,22 +65,22 @@
               items: [
                 {
                   value: "Peripheral administration: 14a. Reconstitute IV medication from powder",
-                  name: "peripheral-14a",
+                  name: "ivTherapyAdditionalProficiencies",
                   text: "14a. Reconstitute IV medication from powder"
                 },
                 {
                   value: "Peripheral administration: 14b. Draw up liquid IV medication, dilute if required in a syringe",
-                  name: "peripheral-14b",
+                  name: "ivTherapyAdditionalProficiencies",
                   text: "14b. Draw up liquid IV medication, dilute if required in a syringe"
                 },
                 {
                   value: "Peripheral administration: 14c. Add IV medication to a bag for infusion",
-                  name: "peripheral-14c",
+                  name: "ivTherapyAdditionalProficiencies",
                   text: "14c. Add IV medication to a bag for infusion"
                 },
                 {
                   value: "Peripheral administration: 14d. Use pre-prepared IV medication",
-                  name: "peripheral-14d",
+                  name: "ivTherapyAdditionalProficiencies",
                   text: "14d. Use pre-prepared IV medication"
                 }
               ]
@@ -89,8 +89,8 @@
 
           <div class="content-group">
             <div class="nhsuk-checkboxes__item nhsuk-u-margin-bottom-6">
-                <input type="checkbox" id="pvad-peripheral-checkbox" name="pvad-peripheral" value="Peripheral venous access devices (PVAD): peripheral cannula" class="nhsuk-checkboxes__input" aria-details="pvad-peripheral-description">
-                <label for="pvad-peripheral-checkbox" class="nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Peripheral venous access devices (PVAD): peripheral cannula</h3></label>
+                <input type="checkbox" id="pvad-peripheral-checkbox" name="ivTherapyAdditionalProficiencies" value="Peripheral venous access devices (PVAD): peripheral cannula" class="nhsuk-checkboxes__input" aria-details="pvad-peripheral-description">
+                <label for="pvad-peripheral-checkbox" class="proto-checkboxes__label nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Peripheral venous access devices (PVAD): peripheral cannula</h3></label>
                 <div id="pvad-peripheral-description" class="nhsuk-checkboxes__description">
                   {{ details({
                     text: "What’s included in this competencies group",
@@ -111,8 +111,8 @@
             </div>
 
             <div class="nhsuk-checkboxes__item nhsuk-u-margin-bottom-6">
-                <input type="checkbox" id="pvad-midline-checkbox" name="pvad-midline" value="Peripheral venous access devices (PVAD): midline catheter" class="nhsuk-checkboxes__input" aria-details="pvad-midline-description">
-                <label for="pvad-midline-checkbox" class="nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Peripheral venous access devices (PVAD): midline catheter</h3></label>
+                <input type="checkbox" id="pvad-midline-checkbox" name="ivTherapyAdditionalProficiencies" value="Peripheral venous access devices (PVAD): midline catheter" class="nhsuk-checkboxes__input" aria-details="pvad-midline-description">
+                <label for="pvad-midline-checkbox" class="proto-checkboxes__label nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Peripheral venous access devices (PVAD): midline catheter</h3></label>
                 <div id="pvad-midline-description" class="nhsuk-checkboxes__description">
                   {{ details({
                     text: "What’s included in this competencies group",
@@ -134,8 +134,8 @@
             </div>
 
             <div class="nhsuk-checkboxes__item nhsuk-u-margin-bottom-6">
-                <input type="checkbox" id="cvc-short-term-checkbox" name="cvc-short-term" value="Central Venous Access Devices (CVAD): central venous catheter (CVC) short term non skin tunnelled" class="nhsuk-checkboxes__input" aria-details="cvc-short-term-description">
-                <label for="cvc-short-term-checkbox" class="nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central Venous Access Devices (CVAD): central venous catheter (CVC) short term non skin tunnelled</h3></label>
+                <input type="checkbox" id="cvc-short-term-checkbox" name="ivTherapyAdditionalProficiencies" value="Central Venous Access Devices (CVAD): central venous catheter (CVC) short term non skin tunnelled" class="nhsuk-checkboxes__input" aria-details="cvc-short-term-description">
+                <label for="cvc-short-term-checkbox" class="proto-checkboxes__label nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central Venous Access Devices (CVAD): central venous catheter (CVC) short term non skin tunnelled</h3></label>
                 <div id="cvc-short-term-description" class="nhsuk-checkboxes__description">
                   {{ details({
                     text: "What’s included in this competencies group",
@@ -155,8 +155,8 @@
             </div>
 
             <div class="nhsuk-checkboxes__item nhsuk-u-margin-bottom-6">
-                <input type="checkbox" id="cvc-long-term-checkbox" name="cvc-long-term" value="Central Venous Access Devices (CVAD): central venous catheter (CVC) long term skin tunnelled" class="nhsuk-checkboxes__input" aria-details="cvc-long-term-description">
-                <label for="cvc-long-term-checkbox" class="nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central Venous Access Devices (CVAD): central venous catheter (CVC) long term skin tunnelled</h3></label>
+                <input type="checkbox" id="cvc-long-term-checkbox" name="ivTherapyAdditionalProficiencies" value="Central Venous Access Devices (CVAD): central venous catheter (CVC) long term skin tunnelled" class="nhsuk-checkboxes__input" aria-details="cvc-long-term-description">
+                <label for="cvc-long-term-checkbox" class="proto-checkboxes__label nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central Venous Access Devices (CVAD): central venous catheter (CVC) long term skin tunnelled</h3></label>
                 <div id="cvc-long-term-description" class="nhsuk-checkboxes__description">
                   {{ details({
                     text: "What’s included in this competencies group",
@@ -176,8 +176,8 @@
             </div>
 
             <div class="nhsuk-checkboxes__item nhsuk-u-margin-bottom-6">
-                <input type="checkbox" id="cvc-picc-checkbox" name="cvc-picc" value="Central Venous Access Devices (CVAD): central venous catheter (CVC) percutaneously inserted central catheter (PICC)" class="nhsuk-checkboxes__input" aria-details="cvc-picc-description">
-                <label for="cvc-picc-checkbox" class="nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central Venous Access Devices (CVAD): central venous catheter (CVC) percutaneously inserted central catheter (PICC)</h3></label>
+                <input type="checkbox" id="cvc-picc-checkbox" name="ivTherapyAdditionalProficiencies" value="Central Venous Access Devices (CVAD): central venous catheter (CVC) percutaneously inserted central catheter (PICC)" class="nhsuk-checkboxes__input" aria-details="cvc-picc-description">
+                <label for="cvc-picc-checkbox" class="proto-checkboxes__label nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central Venous Access Devices (CVAD): central venous catheter (CVC) percutaneously inserted central catheter (PICC)</h3></label>
                 <div id="cvc-picc-description" class="nhsuk-checkboxes__description">
                   {{ details({
                     text: "What’s included in this competencies group",
@@ -197,8 +197,8 @@
             </div>
 
             <div class="nhsuk-checkboxes__item nhsuk-u-margin-bottom-6">
-                <input type="checkbox" id="implanted-port-checkbox" name="implanted-port" value="Central venous access device (CVAD): implanted central venous catheter (port)" class="nhsuk-checkboxes__input" aria-details="implanted-port-description">
-                <label for="implanted-port-checkbox" class="nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central venous access device (CVAD): implanted central venous catheter (port)</h3></label>
+                <input type="checkbox" id="implanted-port-checkbox" name="ivTherapyAdditionalProficiencies" value="Central venous access device (CVAD): implanted central venous catheter (port)" class="nhsuk-checkboxes__input" aria-details="implanted-port-description">
+                <label for="implanted-port-checkbox" class="proto-checkboxes__label nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central venous access device (CVAD): implanted central venous catheter (port)</h3></label>
                 <div id="implanted-port-description" class="nhsuk-checkboxes__description">
                   {{ details({
                     text: "What’s included in this competencies group",
@@ -217,8 +217,8 @@
             </div>
 
             <div class="nhsuk-checkboxes__item nhsuk-u-margin-bottom-6">
-                <input type="checkbox" id="uvc-checkbox" name="uvc" value="Central venous access device (CVAD): umbilical venous catheter (UVC)" class="nhsuk-checkboxes__input" aria-details="uvc-description">
-                <label for="uvc-checkbox" class="nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central venous access device (CVAD): umbilical venous catheter (UVC)</h3></label>
+                <input type="checkbox" id="uvc-checkbox" name="ivTherapyAdditionalProficiencies" value="Central venous access device (CVAD): umbilical venous catheter (UVC)" class="nhsuk-checkboxes__input" aria-details="uvc-description">
+                <label for="uvc-checkbox" class="proto-checkboxes__label nhsuk-checkboxes__label nhsuk-label"><h3 class="nhsuk-u-margin-bottom-2">Central venous access device (CVAD): umbilical venous catheter (UVC)</h3></label>
                 <div id="uvc-description" class="nhsuk-checkboxes__description">
                   {{ details({
                     text: "What’s included in this competencies group",
