--- a/app/views/prototypes/paper-transfer-process/_dls-parts/index.html
+++ b/app/views/prototypes/paper-transfer-process/_dls-parts/index.html
@@ -74,60 +74,14 @@
       </p>
 
       <div id="searchable-elements">
-        <!-- Activity - IV Therapy -->
-        <div class="searchable-element nhsuk-panel" id="6-sa-card">
-          <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0">
-            <summary class="nhsuk-details__summary nhsuk-u-padding-top-0 nhsuk-u-padding-left-0">
-              <span class="nhsuk-details__summary-text searchable-element-title" id="6-name-sa">IV Therapy Passport</span>
-            </summary>
-            <div class="nhsuk-details__text nhsuk-u-padding-left-0">
-              <dl class="nhsuk-summary-list">
-                <div class="nhsuk-summary-list__row">
-                  <dt class="nhsuk-summary-list__key">Enrolled at</dt>
-                  <dd class="nhsuk-summary-list__value">##NHSE Demo Centre##</dd>
-                </div>
-                <div class="nhsuk-summary-list__row">
-                  <dt class="nhsuk-summary-list__key">Enrolled</dt>
-                  <dd class="nhsuk-summary-list__value">04/04/2023</dd>
-                </div>
-                <div class="nhsuk-summary-list__row">
-                  <dt class="nhsuk-summary-list__key">Last access</dt>
-                  <dd class="nhsuk-summary-list__value">20/09/2024</dd>
-                </div>
-                <div class="nhsuk-summary-list__row">
-                  <dt class="nhsuk-summary-list__key">Complete by</dt>
-                  <dd class="nhsuk-summary-list__value">No complete by date set</dd>
-                </div>
-              </dl>
-            </div>
-          </details>
-
-          <div class="nhsuk-grid-row">
-            <div class="nhsuk-grid-column-full">
-              <a class="nhsuk-button nhsuk-u-margin-right-2 nhsuk-u-margin-bottom-2" href="/paper-transfer/_dls-parts/iv-therapy">Launch self-assessment</a>
-              <a class="nhsuk-button delete-button nhsuk-u-margin-bottom-2" href="#">Remove</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Activity - Step 1 Proficiencies -->
-        <div class="searchable-element nhsuk-panel" id="7-sa-card">
-          <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0">
-            <summary class="nhsuk-details__summary nhsuk-u-padding-top-0 nhsuk-u-padding-left-0">
-              <span class="nhsuk-details__summary-text searchable-element-title" id="7-name-sa">Step 1 Proficiencies - National Proficiency Framework for Registered Nurses in Adult Critical Care</span>
-            </summary>
-            <div class="nhsuk-details__text nhsuk-u-padding-left-0">
-              <div class="nhsuk-u-padding-left-3">
-                <div class="nhsuk-grid-row">
-                  <div class="nhsuk-grid-column-three-quarters tags">
-                    <div class="card-filter-tag">
-                      <strong class="nhsuk-tag nhsuk-tag--blue">Self assessment</strong>
-                    </div>
-                    <div class="card-filter-tag">
-                      <strong class="nhsuk-tag nhsuk-tag--grey">Competency assessment</strong>
-                    </div>
-                  </div>
-                </div>
+        <form action="/choose-framework" method="post" class="form">
+          <!-- Activity - IV Therapy -->
+          <div class="searchable-element nhsuk-panel" id="6-sa-card">
+            <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0">
+              <summary class="nhsuk-details__summary nhsuk-u-padding-top-0 nhsuk-u-padding-left-0">
+                <span class="nhsuk-details__summary-text searchable-element-title" id="6-name-sa">IV Therapy Passport</span>
+              </summary>
+              <div class="nhsuk-details__text nhsuk-u-padding-left-0">
                 <dl class="nhsuk-summary-list">
                   <div class="nhsuk-summary-list__row">
                     <dt class="nhsuk-summary-list__key">Enrolled at</dt>
@@ -135,11 +89,11 @@
                   </div>
                   <div class="nhsuk-summary-list__row">
                     <dt class="nhsuk-summary-list__key">Enrolled</dt>
-                    <dd class="nhsuk-summary-list__value">17/04/2023</dd>
+                    <dd class="nhsuk-summary-list__value">30/09/2024</dd>
                   </div>
                   <div class="nhsuk-summary-list__row">
                     <dt class="nhsuk-summary-list__key">Last access</dt>
-                    <dd class="nhsuk-summary-list__value">18/09/2024</dd>
+                    <dd class="nhsuk-summary-list__value"></dd>
                   </div>
                   <div class="nhsuk-summary-list__row">
                     <dt class="nhsuk-summary-list__key">Complete by</dt>
@@ -147,17 +101,80 @@
                   </div>
                 </dl>
               </div>
-            </div>
-          </details>
+            </details>
 
-          <div class="nhsuk-grid-row">
-            <div class="nhsuk-grid-column-full">
-              <a class="nhsuk-button nhsuk-u-margin-right-2 nhsuk-u-margin-bottom-2" href="#">Launch self assessment</a>
-              <a class="nhsuk-button delete-button nhsuk-u-margin-bottom-2" href="#">Remove</a>
+            <div class="nhsuk-grid-row">
+              <div class="nhsuk-grid-column-full">
+                <!-- TODO - add frameworkPostfix to name to launch button-->
+
+                {{ button({
+                  text: "Launch self-assessment",
+                  name: "frameworkName",
+                  value: "IV Therapy",
+                  classes:"nhsuk-u-margin-right-2 nhsuk-u-margin-bottom-2"
+                }) }}
+                <!-- <a class="nhsuk-button nhsuk-u-margin-right-2 nhsuk-u-margin-bottom-2" href="/paper-transfer/_dls-parts/iv-therapy">Launch self-assessment</a> -->
+                <a class="nhsuk-button delete-button nhsuk-u-margin-bottom-2" href="#">Remove</a>
+              </div>
             </div>
           </div>
-        </div>
 
+          <!-- Activity - Step 1 Proficiencies -->
+          <div class="searchable-element nhsuk-panel" id="7-sa-card">
+            <details class="nhsuk-details nhsuk-expander nhsuk-u-margin-bottom-0">
+              <summary class="nhsuk-details__summary nhsuk-u-padding-top-0 nhsuk-u-padding-left-0">
+                <span class="nhsuk-details__summary-text searchable-element-title" id="7-name-sa">Step 1 Proficiencies - National Proficiency Framework for Registered Nurses in Adult Critical Care</span>
+              </summary>
+              <div class="nhsuk-details__text nhsuk-u-padding-left-0">
+                <div class="nhsuk-u-padding-left-3">
+                  <div class="nhsuk-grid-row">
+                    <div class="nhsuk-grid-column-three-quarters tags">
+                      <div class="card-filter-tag">
+                        <strong class="nhsuk-tag nhsuk-tag--blue">Self assessment</strong>
+                      </div>
+                      <div class="card-filter-tag">
+                        <strong class="nhsuk-tag nhsuk-tag--grey">Competency assessment</strong>
+                      </div>
+                    </div>
+                  </div>
+                  <dl class="nhsuk-summary-list">
+                    <div class="nhsuk-summary-list__row">
+                      <dt class="nhsuk-summary-list__key">Enrolled at</dt>
+                      <dd class="nhsuk-summary-list__value">##NHSE Demo Centre##</dd>
+                    </div>
+                    <div class="nhsuk-summary-list__row">
+                      <dt class="nhsuk-summary-list__key">Enrolled</dt>
+                      <dd class="nhsuk-summary-list__value">30/09/2024</dd>
+                    </div>
+                    <div class="nhsuk-summary-list__row">
+                      <dt class="nhsuk-summary-list__key">Last access</dt>
+                      <dd class="nhsuk-summary-list__value"></dd>
+                    </div>
+                    <div class="nhsuk-summary-list__row">
+                      <dt class="nhsuk-summary-list__key">Complete by</dt>
+                      <dd class="nhsuk-summary-list__value">No complete by date set</dd>
+                    </div>
+                  </dl>
+                </div>
+              </div>
+            </details>
+
+            <div class="nhsuk-grid-row">
+              <div class="nhsuk-grid-column-full">
+
+                <!-- TODO - add frameworkPostfix to name to launch button-->
+                {{ button({
+                  text: "Launch self-assessment",
+                  name: "frameworkName",
+                  value: "Steps 1",
+                  classes:"nhsuk-u-margin-right-2 nhsuk-u-margin-bottom-2"
+                }) }}
+                <!-- <a class="nhsuk-button nhsuk-u-margin-right-2 nhsuk-u-margin-bottom-2" href="#">Launch self assessment</a> -->
+                <a class="nhsuk-button delete-button nhsuk-u-margin-bottom-2" href="#">Remove</a>
+              </div>
+            </div>
+          </div>
+        </form>
       </div>
 
     </div>
