--- a/app/views/prototypes/paper-transfer-process/review-and-submit/index.html
+++ b/app/views/prototypes/paper-transfer-process/review-and-submit/index.html
@@ -56,54 +56,17 @@
             <dt class="nhsuk-summary-list__key">Additional proficiencies</dt>
             <dd class="nhsuk-summary-list__value">
               <ul>
-
-                {# Methods of preparation #}
-                {% if data['preparation-14a'] %}
-                  <li>{{ data['preparation-14a'] }}</li>
-                {% endif %}
-                {% if data['preparation-14b'] %}
-                  <li>{{ data['preparation-14b'] }}</li>
-                {% endif %}
-                {% if data['preparation-14c'] %}
-                  <li>{{ data['preparation-14c'] }}</li>
-                {% endif %}
-                {% if data['preparation-14d'] %}
-                  <li>{{ data['preparation-14d'] }}</li>
-                {% endif %}
-
-                {# Peripheral administration #}
-                {% if data['peripheral-14a'] %}
-                  <li>{{ data['peripheral-14a'] }}</li>
-                {% endif %}
-                {% if data['peripheral-14b'] %}
-                  <li>{{ data['peripheral-14b'] }}</li>
-                {% endif %}
-                {% if data['peripheral-14c'] %}
-                  <li>{{ data['peripheral-14c'] }}</li>
-                {% endif %}
-                {% if data['peripheral-14d'] %}
-                  <li>{{ data['peripheral-14d'] }}</li>
-                {% endif %}
-
-                {# The rest #}
-                {% if data['pvad-midline'] %}
-                  <li>{{ data['pvad-midline'] }}</li>
-                {% endif %}
-                {% if data['cvc-short-term'] %}
-                  <li>{{ data['cvc-short-term'] }}</li>
-                {% endif %}
-                {% if data['cvc-long-term'] %}
-                  <li>{{ data['cvc-long-term'] }}</li>
-                {% endif %}
-                {% if data['cvc-picc'] %}
-                  <li>{{ data['cvc-picc'] }}</li>
-                {% endif %}
-                {% if data['implanted-port'] %}
-                  <li>{{ data['implanted-port'] }}</li>
-                {% endif %}
-                {% if data['uvc'] %}
-                  <li>{{ data['uvc'] }}</li>
-                {% endif %}
+              {% if data['stepsAdditionalProficiencies'] %}
+                {% for item in data['stepsAdditionalProficiencies'] %}
+                  <li>{{ item }}</li>
+                {% endfor %}
+              {% elif data['ivTherapyAdditionalProficiencies'] %}
+                {% for item in data['ivTherapyAdditionalProficiencies'] %}
+                  <li>{{ item }}</li>
+                {% endfor %}
+              {% else %}
+                <li>No additional proficiencies have been included</li>
+              {% endif %}
               </ul>
             </dd>
             <dd class="nhsuk-summary-list__actions">
