--- a/app/assets/sass/_variables.scss
+++ b/app/assets/sass/_variables.scss
@@ -22,8 +22,9 @@ $heading-line-height: 1.2;
 
 /* Colours and transparency
 ---------------------------------------------------------------------- */
-$alpha: 0.95;
+$lh-page-blue: #F2F8FD;
 
+$alpha: 0.95;
 $spectre: transparent;
 $transparent-white: rgba(white, $alpha);
 
